<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/local_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/language_title"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/local_setting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="25dp"
            android:text="@string/lang"
            android:textColor="@android:color/black"
            android:textSize="15sp"
            android:textStyle="italic" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/activity_vertical_margin">

        <TextView
            android:id="@+id/notification_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/notifications_title"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Switch
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/summary_daily_reminder"
            android:id="@+id/daily_reminder"
            android:paddingLeft="25dp"
            android:textSize="15sp"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:textStyle="italic"
            android:checked="false"
            />

        <Switch
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/summary_release_reminder"
            android:id="@+id/release_Reminder"
            android:paddingLeft="25dp"
            android:textSize="15sp"
            android:textStyle="italic"
            android:checked="false"
            />
    </LinearLayout>


</LinearLayout>