<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".details.MovieDetailFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin">

            <ImageView
                android:id="@+id/detail_movie_poster"
                android:layout_width="150dp"
                android:layout_height="200dp"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:scaleType="fitXY"
                android:src="@drawable/ic_launcher_background" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/detail_movie_title"
                    style="?android:attr/textAppearanceMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="14dp"
                    android:layout_marginLeft="@dimen/activity_vertical_margin"
                    android:layout_marginStart="@dimen/activity_vertical_margin"
                    android:text="@string/movie_title"
                    android:textColor="@color/colorBlack"
                    android:textIsSelectable="true"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/detail_movie_vote"
                    style="?android:attr/textAppearanceMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="14dp"
                    android:layout_marginLeft="@dimen/activity_vertical_margin"
                    android:text="@string/release_date"
                    android:textColor="@color/colorBlack"
                    android:textIsSelectable="true"
                    android:layout_marginStart="@dimen/activity_vertical_margin" />

                <TextView
                    android:id="@+id/detail_movie_rating"
                    style="?android:attr/textAppearanceMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="14dp"
                    android:layout_marginLeft="@dimen/activity_vertical_margin"
                    android:text="@string/vote"
                    android:textColor="@color/colorBlack"
                    android:textIsSelectable="true"
                    android:layout_marginStart="@dimen/activity_vertical_margin" />


                <TextView
                    android:id="@+id/detail_movie_release_date"
                    style="?android:attr/textAppearanceMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="14dp"
                    android:layout_marginLeft="@dimen/activity_vertical_margin"
                    android:text="@string/release_date"
                    android:textColor="@color/colorBlack"
                    android:textIsSelectable="true"
                    android:layout_marginStart="@dimen/activity_vertical_margin" />

                <include layout="@layout/detail_button" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin">


        </LinearLayout>

        <com.codesgood.views.JustifiedTextView
            android:id="@+id/detail_movie_overview"
            style="?android:attr/textAppearanceMedium"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="16dp"
            android:text="@string/overview"
            android:textColor="@color/colorBlack"
            android:textIsSelectable="true"
            android:textStyle="italic" />


    </LinearLayout>
</ScrollView>